Fix css flickering issue on swiching between info and valid msgs

--- a/client/blocks/plugins-update-manager/schedule-form.scss
+++ b/client/blocks/plugins-update-manager/schedule-form.scss
@@ -128,21 +128,20 @@
 		}
 	}
 
-	.components-text.validation-msg {
+	.components-text.validation-msg,
+	.components-text.info-msg {
 		display: block;
-		margin-bottom: 0.5rem;
+		min-height: 1rem;
 		font-size: 0.75rem;
+		margin-bottom: 0.5rem;
+	}
+
+	.components-text.validation-msg {
 		color: var(--studio-red-50);
 
 		svg {
 			fill: var(--studio-red-50);
 			margin-left: 0;
 		}
-	}
-
-	.components-text.info-msg {
-		display: block;
-		font-size: 0.75rem;
-		margin-bottom: 0.5rem;
 	}
 }
